[metadata]
name = MDtools
version = attr: mdtools.__version__
description = MD-tools
long_description = file: README.md, LICENSE.md
long_description_content_type=text/markdown

url = 

author =
author_email =
license = 
keywords = 

[options]
packages= find:
install_requires = 
    pyyaml
    pydantic
    black
    flake8
    pre-commit
    tqdm
    parmed==3.0
    MDAnalysis
    simtk.unit
    numpy
    h5py
python_requires = >=3.6

[options.packages.find]
exclude =
    data
    tests
    docs
    env
    
[flake8]
exclude = .git,*migrations*,*alembic*
max-line-length = 118
extend-ignore = E203,W503,E501,E302,E231,F541
